# maestro

./: .clinerules  .env.example  .gitignore  .supervisor  README.md  __main__.py  kill.sh  maestro.sh  pyproject.toml  restart.sh  start.sh  stop.sh  supervisor.sh
core/: file_manager.py  version_control.py
mcp/: __init__.py  server.py
mcp/services/: file_services.py  git_services.py  process_services.py
memory-bank/: active-context.md  directive.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
src/simply_maestro/: __init__.py  __main__.py
src/simply_maestro/core/: __init__.py  file_manager.py  process_manager.py  version_control.py
src/simply_maestro/mcp/: __init__.py  server.py
src/simply_maestro/mcp/services/: __init__.py  file_services.py  git_services.py  process_services.py
src/simply_maestro/tests/: __init__.py  test_file_manager.py  test_process_manager.py
src/supervisor/: __init__.py  __main__.py
src/supervisor/core/: __init__.py  file_manager.py  process_manager.py  version_control.py
src/supervisor/mcp/: server.py
src/supervisor/mcp/services/: __init__.py  file_services.py  git_services.py  process_services.py
src/supervisor/tests/: test_file_manager.py  test_process_manager.py
tests/: __init__.py
