[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simply-maestro"
version = "1.0.0-alpha"
description = "Simply Maestro - a process manager that can monitor, edit code, and restart processes while providing MCP service capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Simply Chris"}
]
dependencies = [
    "psutil>=5.9.0",
    "mcp>=1.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.25.0",
    "sse-starlette>=1.6.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "ruff>=0.0.261",
    "mypy>=1.2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/simply_maestro"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
